kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-app
  labels:
    app: netflix-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8081
  selector:
    app.kubernetes.io/name: netflix-app
